--- a/project1/first_page.html
+++ b/project1/first_page.html
@@ -13,8 +13,8 @@
   <div class="header">
     <h2>Dispositif</h2>
   </div>
-  
-  
+
+  <h1>Menu</h
   <div class="left" style="background-color:#aaa;">Urgence</div>
   <div class="middle" style="background-color:#bbb;">Prévention</div>  
   <div class="right" style="background-color:#ccc;">Formation</div>
