--- a/project1/first_page.html
+++ b/project1/first_page.html
@@ -14,7 +14,7 @@
     <h2>Dispositif</h2>
   </div>
 
-  <h1>Menu</h
+  <h1>Menu        </h1>
   <div class="left" style="background-color:#aaa;">Urgence</div>
   <div class="middle" style="background-color:#bbb;">Prévention</div>  
   <div class="right" style="background-color:#ccc;">Formation</div>
