--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bienvenu</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
@@ -20,6 +20,8 @@
         ‘’Mon statut de princesse n’a jamais constitué un obstacle pour que je vive et réalise pleinement ma vocation de militante engagée, plus spécifiquement dans la promotion des droits de la femme et de l’enfant. Et s’il en a toujours été ainsi, c’est bien parce que les problèmes des Marocains me tiennent à cœur, étant moi-même aux prises avec les mêmes préoccupations personnelles et familiales”.
         Extrait du discours de
         Son Altesse Royale La Princesse Lalla Meryem</p>
+    </div>
+    <div>
       <a href="first_page.html" class="button">Go to Another Page</a>
     </div>
   </div>
