--- a/project1_aoen/index.html
+++ b/project1_aoen/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="media/princesse.jpg" alt="Description Image" id="image">
+        <div>
+            <img src="media/princesse.jpg" alt="Description Image" id="image">
+        </div>
         <div class="description">
             <p>Your description goes here. This text provides an overview of the content or purpose of the site.</p>
             <button onclick="location.href='Menu.html'">Continuer</button>
