--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="menu-content mb-4">
-              <a href="#" class="link-offset-2 link-underline link-underline-opacity-0 text-dark">
+              <a href="dispositif.html" class="link-offset-2 link-underline link-underline-opacity-0 text-dark">
                 Dispositifs
               </a>
             </div>
@@ -22,75 +22,30 @@
         <div class="row">
             <div class="col-md-4 col-xs-12">
               <div class="menu-content">
-                <a href="#">
+                <a href="urgences.html">
                   Urgences
                 </a>
               </div>
             </div>
             <div class="col-md-4 col-xs-12">
               <div class="menu-content">
-                <a href="#">
+                <a href="prevention.html">
                   Préventions
                 </a>
               </div>
             </div>
             <div class="col-md-4 col-xs-12">
               <div class="menu-content">
-                <a href="#">
+                <a href="formation.html">
                   Formations
                 </a>
               </div>
             </div>
         </div>
 
-        <!-- Gallery -->
-<div class="row">
-  <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Boat on Calm Water"
-    />
-
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain1.webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Wintry Mountain Landscape"
-    />
-  </div>
-
-  <div class="col-lg-4 mb-4 mb-lg-0">
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain2.webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Mountains in the Clouds"
-    />
-
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Boat on Calm Water"
-    />
-  </div>
-
-  <div class="col-lg-4 mb-4 mb-lg-0">
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(18).webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Waves at Sea"
-    />
-
-    <img
-      src="https://mdbcdn.b-cdn.net/img/Photos/Vertical/mountain3.webp"
-      class="w-100 shadow-1-strong rounded mb-4"
-      alt="Yosemite National Park"
-    />
-  </div>
-</div>
-<!-- Gallery -->
     </div>
 
-    <script src="./assets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+    <script src="../assets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
   </body>
 
 </html>
