--- a/Project_001/pages/prevention.html
+++ b/Project_001/pages/prevention.html
@@ -8,29 +8,147 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello from prevention</h1>
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-          <div class="menu-content">
-            <a href="urgences.html">
-              pdf
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <div class="menu-content">
-            <a href="prevention.html">
-              video
-            </a>
-          </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <div class="menu-content">
-            <a href="formation.html">
-              Gallery
-            </a>
-          </div>
-        </div>
+  <h1 class='text-center mb-5 text-danger'>Ecole des mères</h1>
+  <div class="row m-5">
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>PDF</h1>
+      <div style="text-align: -webkit-center;">
+        <embed src="../media/cin.pdf" width="320px" height="240px" />
+      </div>
     </div>
+
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>Video</h1>
+      <div style="text-align: -webkit-center;">
+        <video width="320" height="240" controls>
+          <source src="../media/movie.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12 ">
+      <h1 class='text-center mb-3'>Gallery</h1>
+      <div id="carouselExampleControls" class="carousel slide" style="text-align: -webkit-center;"
+        data-bs-ride="carousel">
+        <div class="carousel-inner" style="width: 320px; height: 240px;">
+          <div class="carousel-item active">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px;">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px; ">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <h1 class='text-center mb-5 text-danger'>eTofoula</h1>
+  <div class="row m-5">
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>PDF</h1>
+      <div style="text-align: -webkit-center;">
+        <embed src="../media/cin.pdf" width="320px" height="240px" />
+      </div>
+    </div>
+
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>Video</h1>
+      <div style="text-align: -webkit-center;">
+        <video width="320" height="240" controls>
+          <source src="../media/movie.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12 ">
+      <h1 class='text-center mb-3'>Gallery</h1>
+      <div id="carouselExampleControls" class="carousel slide" style="text-align: -webkit-center;"
+        data-bs-ride="carousel">
+        <div class="carousel-inner" style="width: 320px; height: 240px;">
+          <div class="carousel-item active">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px;">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px; ">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <h1 class='text-center mb-5 text-danger'>Atelier protocole // PMP</h1>
+  <div class="row m-5">
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>PDF</h1>
+      <div style="text-align: -webkit-center;">
+        <embed src="../media/cin.pdf" width="320px" height="240px" />
+      </div>
+    </div>
+
+    <div class="col-md-4 col-xs-12">
+      <h1 class='text-center mb-3'>Video</h1>
+      <div style="text-align: -webkit-center;">
+        <video width="320" height="240" controls>
+          <source src="../media/movie.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+    <div class="col-md-4 col-xs-12 ">
+      <h1 class='text-center mb-3'>Gallery</h1>
+      <div id="carouselExampleControls" class="carousel slide" style="text-align: -webkit-center;"
+        data-bs-ride="carousel">
+        <div class="carousel-inner" style="width: 320px; height: 240px;">
+          <div class="carousel-item active">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px;">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+          <div class="carousel-item" style="width: 320px; height: 240px; ">
+            <img src="../media/4.jpg" class="d-block w-100 text-center" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
